--- a/documentation/titlepage.tex
+++ b/documentation/titlepage.tex
@@ -3,25 +3,16 @@
 
 \vspace*{\fill}
 
-\begin{latexonly}
 \noindent
-{\Huge \textsf{Easel Programmer's Guide}} \\ 
+{\Huge{Easel Programmer's Guide}} \\ 
 \rule[2pt]{\textwidth}{1pt} \\
-\hspace*{\fill} {\large \textsf{A library of C functions for
+\hspace*{\fill} {\large {A library of C functions for
     biosequence analysis} \\ }
-\end{latexonly}
-
-\begin{htmlonly}
-\begin{center}
-{\Huge \textbf{Easel Programmer's Guide}}\\
-{\large \textbf{A library of C functions for biosequence analysis}}\\
-\end{center}
-\end{htmlonly}
 
 \vspace*{\fill}
 
 \begin{center}
-\textsl{\htmladdnormallink{http://selab.wustl.edu/easel/}{http://selab.wustl.edu/easel/}}\\
+\url{http://selab.wustl.edu/easel/}\\
 Version 0.1; November 2004 \\ 
 
 \vspace*{\fill}
@@ -31,7 +22,7 @@ Howard Hughes Medical Institute and Dept. of Genetics\\
 Washington University School of Medicine\\
 4444 Forest Park Blvd., Box 8510\\
 Saint Louis, Missouri 63108, USA\\
-\textsl{http://selab.wustl.edu/} \\
+\url{http://selab.wustl.edu/}\\
 \end{center}
 
 \vspace*{\fill}
