This is a partial commit. Revision to augmentation, filenaming, include conventions in progress. xref STL9/p.39
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/easel@34 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/wuss.tex
+++ b/wuss.tex
@@ -6,10 +6,10 @@ The API provides the following converters:
 
 \begin{tabular}{ll}
 \ccode{esl\_wuss2ct()} & Convert WUSS string to Zuker CT array. \\
+\ccode{esl\_ct2wuss()} & Convert CT array (no pk's) to WUSS string. \\
 \ccode{esl\_wuss2kh()} & Convert WUSS string to old format (Konings/Hogeweg).\\
 \ccode{esl\_kh2wuss()} & Convert old format to WUSS string.\\
-\ccode{esl\_wuss\_nopseudo()} & Remove pseudoknot annotation from a
-WUSS string.\\
+\ccode{esl\_wuss\_nopseudo()} & Crudely remove pseudoknot annotation from WUSS string.\\
 \end{tabular}
 
 WUSS notation is defined later in the Formats section of this
