--- a/documentation/macros.tex
+++ b/documentation/macros.tex
@@ -1,9 +1,10 @@
 % Typography.
 \newcommand{\ccode}[1]{{\small\texttt{#1}}}
 \newcommand{\emcode}[1]{{\small\bfseries\texttt{#1}}}
+\newcommand{\prog}[1]{\small\texttt{#1}}
+\newcommand{\eslmod}[1]{{\small\bfseries\texttt{#1}}}
 
 % Eliminate the ones below someday. 
-\newcommand{\prog}[1]{\texttt{#1}}
 \newcommand{\cmacro}[1]{\texttt{#1}}
 \newcommand{\cvar}[1]{\texttt{#1}}
 \newcommand{\cvartype}[1]{\texttt{#1}}
