vectorops updated and included.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/easel@38 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/intro.tex
+++ b/documentation/intro.tex
@@ -56,7 +56,7 @@ source files without the rest of the library.
 The ability to borrow individual files from Easel makes it different
 from many other C libraries. For example, to get Easel's sequence file
 i/o API, for example, you just take the sqio module (the C source
-\ccode{esl_sqio.c} and the header \ccode{esl_sqio.h}), plus the
+\ccode{esl\_sqio.c} and the header \ccode{esl\_sqio.h}), plus the
 obligatory Easel core (\ccode{easel.c} and \ccode{easel.h}). Most of
 Easel's modules can stand alone in this way (the \emph{base}
 modules). Only a few are dependent on other modules (the
