--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -96,6 +96,12 @@ error?} \hspace{3em} -- Franz Kafka, in \emph{The Castle}
 \input{autotext/esl_stack_functions}
 
 \newpage
+\section{The vectorops module: simple vector operations}
+\input{../esl_vectorops}
+\subsection{Functions in the vectorops module}
+\input{autotext/esl_vectorops_functions}
+
+\newpage
 \section{The wuss module: RNA secondary structure annotation}
 \input{../esl_wuss}
 \subsection{Functions in the wuss module}
