--- a/esl_msa.tex
+++ b/esl_msa.tex
@@ -25,8 +25,8 @@ alignment file; a normal C \ccode{FILE} stream is used for output.)
    \multicolumn{2}{c}{\textbf{Alterations of an MSA}}\\
 \ccode{esl\_msa\_NoGaps()}            & Removes columns containing any gaps.\\
 \ccode{esl\_msa\_MinimGaps()}         & Removes columns containing only gaps.\\
-\ccode{esl\_msa\_SymConvert()}        & A \ccode{tr//} op on the alignment.\\
-\end{tabular}\hline
+\ccode{esl\_msa\_SymConvert()}        & A \ccode{tr//} op on the alignment.\\\hline
+\end{tabular}
 
 \subsection{Example of using the msa API}
 
