--- a/esl_sqio.tex
+++ b/esl_sqio.tex
@@ -27,8 +27,8 @@ The API consists of the following functions:
     \multicolumn{2}{c}{\textbf{using file format codes}}\\
 \ccode{esl\_sqfile\_FormatCode()} & Converts format string to internal code\\
 \ccode{esl\_sqfile\_FormatString()} & Converts format code to string\\
-\ccode{esl\_sqfile\_IsAlignment()} & Checks if a code is alignment file fmt\\
-\end{tabular}\hline
+\ccode{esl\_sqfile\_IsAlignment()} & Checks if a code is alignment file fmt\\\hline
+\end{tabular}
 \end{center}
 
 \subsection{Example of using the sqio API}
