--- a/esl_wuss.tex
+++ b/esl_wuss.tex
@@ -9,6 +9,7 @@ The API provides the following converters:
 \ccode{esl\_ct2wuss()} & Convert CT array (no pk's) to WUSS string. \\
 \ccode{esl\_wuss2kh()} & Convert WUSS string to old format (Konings/Hogeweg).\\
 \ccode{esl\_kh2wuss()} & Convert old format to WUSS string.\\
+\ccode{esl\_wuss\_full()}& Convert simple WUSS to full (output) WUSS.\\
 \ccode{esl\_wuss\_nopseudo()} & Crudely remove pseudoknot annotation from WUSS string.\\
 \end{tabular}
 
