--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -54,6 +54,12 @@ error?} \hspace{3em} -- Franz Kafka, in \emph{The Castle}
 %\input{autotext/dmatrix_functions}
 
 \newpage
+\section{The fileparser module: token-based data file input}
+\input{../esl_fileparser}
+\subsection{Functions in the fileparser module}
+\input{autotext/esl_fileparser_functions}
+
+\newpage
 \section{The getopts (opt) module: command line option parsing and more}
 \input{../esl_getopts}
 \subsection{Functions in the getopts module}
