--- a/esl_vectorops.tex
+++ b/esl_vectorops.tex
@@ -12,23 +12,24 @@ doubles; \ccode{esl\_vec\_ISet()} is for integers.
 
 \begin{tabular}{ll}
    \multicolumn{2}{c}{\textbf{All vectors}}\\
-\ccode{esl\_vec\_\{D,F,I}Set()\}         & Set all items in vector to value.\\
-\ccode{esl\_vec\_\{D,F,I}Scale()\}       & Multiply all items in vector by scale.\\
-\ccode{esl\_vec\_\{D,F,I}Sum()\}         & Return sum of values in vector.\\
-\ccode{esl\_vec\_\{D,F,I}Add()\}         & Add vec2 to vec1.\\
-\ccode{esl\_vec\_\{D,F,I}Copy()\}        & Set vec1 to be same as vec2. \\
-\ccode{esl\_vec\_\{D,F,I}Dot()\}         & Return dot product of two vectors.\\
-\ccode{esl\_vec\_\{D,F,I}Max()\}         & Return value of maximum element in vector.\\
-\ccode{esl\_vec\_\{D,F,I}Min()\}         & Return value of minimum element in vector.\\
-\ccode{esl\_vec\_\{D,F,I}ArgMax()\}      & Return index of maximum element in vector.\\
-\ccode{esl\_vec\_\{D,F,I}ArgMin()\}      & Return index of minimum element in vector.\\
+\ccode{esl\_vec\_\{D,F,I\}Set()}         & Set all items in vector to scalar value.\\
+\ccode{esl\_vec\_\{D,F,I\}Scale()}       & Multiply all items in vector by scalar.\\
+\ccode{esl\_vec\_\{D,F,I\}Increment()}   & Add a scalar to all items in vector.\\
+\ccode{esl\_vec\_\{D,F,I\}Sum()}         & Return scalar sum of values in vector.\\
+\ccode{esl\_vec\_\{D,F,I\}Add()}         & Add vec2 to vec1.\\
+\ccode{esl\_vec\_\{D,F,I\}Copy()}        & Set vec1 to be same as vec2. \\
+\ccode{esl\_vec\_\{D,F,I\}Dot()}         & Return dot product of two vectors.\\
+\ccode{esl\_vec\_\{D,F,I\}Max()}         & Return value of maximum element in vector.\\
+\ccode{esl\_vec\_\{D,F,I\}Min()}         & Return value of minimum element in vector.\\
+\ccode{esl\_vec\_\{D,F,I\}ArgMax()}      & Return index of maximum element in vector.\\
+\ccode{esl\_vec\_\{D,F,I\}ArgMin()}      & Return index of minimum element in vector.\\
     \multicolumn{2}{c}{\textbf{Probability vectors}}\\
-\ccode{esl\_vec\_\{D,F}Norm()\}          & Normalize a probability vector of length n.\\
-\ccode{esl\_vec\_\{D,F}Log()\}           & Convert to log probabilities. \\
-\ccode{esl\_vec\_\{D,F}Entropy()\}       & Return Shannon entropy of probability vector, in bits\\
+\ccode{esl\_vec\_\{D,F\}Norm()}          & Normalize a probability vector of length n.\\
+\ccode{esl\_vec\_\{D,F\}Log()}           & Convert all items in vec to log probabilities. \\
+\ccode{esl\_vec\_\{D,F\}Entropy()}       & Return Shannon entropy of probability vector, in bits\\
     \multicolumn{2}{c}{\textbf{Log probability vectors}}\\
-\ccode{esl\_vec\_\{D,F}Exp()\}           & Convert log p's back to probabilities\\
-\ccode{esl\_vec\_\{D,F}LogSum()\}        & Given vector of log p's; return log of summed p's.\\
+\ccode{esl\_vec\_\{D,F\}Exp()}           & Convert log p's back to probabilities\\
+\ccode{esl\_vec\_\{D,F\}LogSum()}        & Given vector of log p's; return log of summed p's.\\
 \end{tabular}
 
 
