Commit of a broken version: working on incorp of dirichlet code.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@51 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/esl_vectorops.tex
+++ b/esl_vectorops.tex
@@ -30,6 +30,7 @@ doubles; \ccode{esl\_vec\_ISet()} is for integers.
     \multicolumn{2}{c}{\textbf{Log probability vectors}}\\
 \ccode{esl\_vec\_\{D,F\}Exp()}           & Convert log p's back to probabilities\\
 \ccode{esl\_vec\_\{D,F\}LogSum()}        & Given vector of log p's; return log of summed p's.\\
+\ccode{esl\_vec\_\{D,F\}LogNorm()}       & Normalize a log p vector, leaving it in log space. \\
 \end{tabular}
 
 
