--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -49,9 +49,15 @@ error?} \hspace{3em} -- Franz Kafka, in \emph{The Castle}
 \input{autotext/esl_alphabet_functions}
 
 %\newpage
-%%n\section{The dmatrix (dmx) module: linear algebra for 2D double matrices}
+%\section{The dmatrix (dmx) module: linear algebra for 2D double matrices}
 %\subsection{Functions in the dmatrix (dmx) module}
 %\input{autotext/dmatrix_functions}
+
+\newpage
+\section{The dirichlet module: Beta, Gamma, Dirichlet densities and priors}
+\input{../esl_dirichlet}
+\subsection{Functions in the dirichlet module}
+\input{autotext/esl_dirichlet_functions}
 
 \newpage
 \section{The fileparser module: token-based data file input}
