--- a/esl_msa.tex
+++ b/esl_msa.tex
@@ -8,6 +8,8 @@ sequence alignment. A \ccode{ESL\_MSAFILE} is an alignment file,
 opened for input. (No special object is needed for output of an
 alignment file; a normal C \ccode{FILE} stream is used for output.)
 
+The API consists of the following functions:
+
 \vspace{1em}
 \begin{tabular}{ll}\hline
    \multicolumn{2}{c}{\textbf{open/close of an msa file}}\\
